--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "react-native-responsive-screen": "^1.4.2",
     "react-native-safe-area-context": "^4.7.3",
     "react-native-screens": "^3.26.0",
+    "react-native-simple-toast": "^3.3.1",
     "react-native-svg": "^13.14.0",
     "react-native-svg-transformer": "^1.1.0",
     "react-native-tab-view": "^3.5.2",
