--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -3,7 +3,9 @@
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.VIBRATE"/>
     <!-- android:usesCleartextTraffic="true" -->
-    <!-- android:networkSecurityConfig="@xml/network_security_config" -->
+
+          <!-- android:networkSecurityConfig="@xml/network_security_config"   -->
+
     <application
       android:name=".MainApplication"
       android:label="@string/app_name"
@@ -11,16 +13,17 @@
       android:roundIcon="@mipmap/ic_launcher_round"
       android:allowBackup="false"
       android:theme="@style/AppTheme"
-
+      android:networkSecurityConfig="@xml/network_security_config" 
+      android:usesCleartextTraffic="true"
+     
       >
-      
       <activity
         android:name=".MainActivity"
         android:label="@string/app_name"
         android:configChanges="keyboard|keyboardHidden|orientation|screenLayout|screenSize|smallestScreenSize|uiMode"
         android:launchMode="singleTask"
         android:windowSoftInputMode="adjustResize"
-         android:screenOrientation="portrait"
+        android:screenOrientation="portrait"
         android:exported="true">
         <intent-filter>
             <action android:name="android.intent.action.MAIN" />
