--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "react-native-svg-transformer": "^1.1.0",
     "react-native-tab-view": "^3.5.2",
     "react-native-tts": "^4.1.0",
+    "react-native-video": "^6.0.0",
     "react-redux": "^8.1.3",
     "redux": "^4.2.1",
     "redux-logger": "^3.0.6",
