--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "react-native-linear-gradient": "^2.8.3",
     "react-native-modal": "^13.0.1",
     "react-native-otp-inputs": "^7.4.0",
+    "react-native-paper": "^5.12.5",
     "react-native-picker-select": "^9.0.0",
     "react-native-qrcode-scanner": "^1.5.5",
     "react-native-reanimated": "^3.5.4",
