--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "lottie-react-native": "^6.3.1",
     "react": "18.2.0",
     "react-native": "0.72.6",
+    "react-native-autocomplete-input": "^5.4.0",
     "react-native-camera": "^4.2.1",
     "react-native-collapsible": "^1.6.1",
     "react-native-date-picker": "^4.3.7",
